Can't open files/folders when using touch
Affected version
- Nightly flatpak: Yes
- Other: Fedora 36/37, Lenovo Yoga 6
Steps to reproduce
Tap a file/folder twice with "Double-Click" set as the default action to open items.
Current behavior
When double-clicking files and folders with touch, they just get highlighted.
Expected behavior
They should open said file/folder.
Additional information
Screencast_from_09-21-2022_03_39_59_PM
In Files 42.4, double-tapping files and folders works just fine. Screencast_from_10-06-2022_10_24_55_PM
Edited by AlexMicael