list-base: Handle double click with touchscreen

We override the double click in nautilus-list-base but only
have a case for GDK_BUTTON_PRIMARY.  If gtk_gesture_single_get_current_button()
doesn't return a button, assume it's the pimary button.

Fixes: https://gitlab.gnome.org/GNOME/nautilus/-/issues/2538